--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
+  <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
   <body>
-    <p>It was a dark and stormy night...</p>
+    <p>It was a dark and stormy night...It was sunny the next day.</p>
   </body>
 </html>
